[gd_scene load_steps=3 format=3 uid="uid://b324xojkbl53s"]

[ext_resource type="Script" uid="uid://emglp3na5veo" path="res://Assets/Scripts/signup_script.gd" id="1_yem4c"]
[ext_resource type="Texture2D" uid="uid://cx37gryegxi5x" path="res://Assets/Art/Faroiest.jpg" id="2_7oww2"]

[node name="RegisterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yem4c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7oww2")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "CRIAR CONTA"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="DisplayNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nome de exibição:"

[node name="display_name" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Seu nome no jogo"
max_length = 50

[node name="EmailLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Email:"

[node name="username" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Seu email"
max_length = 50

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Senha:"

[node name="password" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Sua senha (min. 8 caracteres)"
max_length = 30
secret = true

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FeedbackText2" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.74902, 0, 1)
horizontal_alignment = 1
autowrap_mode = 3

[node name="login_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "REGISTRAR"

[node name="back_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "VOLTAR"
